plugins {
    id 'java'
    id 'groovy'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
    id 'signing'
}

group 'io.github.zhangliangbo'
version '1.0.1'

sourceCompatibility = "8"
targetCompatibility = "8"

repositories {
    maven { url 'https://maven.aliyun.com/repository/public/' }
    mavenCentral()
}

dependencies {
    //function programming
    implementation 'io.vavr:vavr:0.10.4'
    //netty
    implementation 'io.netty:netty-all:4.1.74.Final'
    //apache
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'org.apache.commons:commons-text:1.9'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    implementation 'org.apache.commons:commons-compress:1.21'
    implementation 'org.apache.commons:commons-email:1.5'
    implementation 'org.apache.commons:commons-pool2:2.11.1'
    implementation 'commons-io:commons-io:2.6'
    implementation 'commons-cli:commons-cli:1.4'
    implementation 'commons-beanutils:commons-beanutils:1.9.4'
    //log
    implementation 'commons-logging:commons-logging:1.2'
    implementation 'org.slf4j:jcl-over-slf4j:1.7.36'
    implementation 'ch.qos.logback:logback-classic:1.2.11'
    implementation 'net.logstash.logback:logstash-logback-encoder:6.4'
    //复制源码，适配android
//    implementation 'commons-codec:commons-codec:1.14'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'com.google.code.gson:gson:2.9.0'
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
    implementation 'com.google.zxing:core:3.4.1'
    implementation 'com.google.zxing:javase:3.4.1'
    implementation 'net.sourceforge.jexcelapi:jxl:2.6.12'
    implementation 'org.apache.poi:poi-ooxml:5.2.0'
    implementation 'com.alibaba:easyexcel:3.0.5'
    implementation 'com.relops:snowflake:1.1'
    implementation 'org.dom4j:dom4j:2.1.3'
    implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
    implementation 'com.sun.xml.bind:jaxb-impl:3.0.2'
    implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.2'
    implementation 'javax.activation:activation:1.1.1'
    implementation group: 'nz.ac.waikato.cms.weka', name: 'weka-dev', version: '3.9.5'
    // https://mvnrepository.com/artifact/com.google.guava/guava
    implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
    //cache
    implementation 'com.github.ben-manes.caffeine:caffeine:3.0.5'
    //weka
    implementation group: 'nz.ac.waikato.cms.weka', name: 'weka-dev', version: '3.9.5'
    //lombok
    implementation 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    //just use in test to study grammar
    testImplementation 'org.codehaus.groovy:groovy-all:3.0.10'
    //real test
    testImplementation 'junit:junit:4.13.2'
    // https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy
    implementation group: 'net.bytebuddy', name: 'byte-buddy', version: '1.12.0'
    // https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy-agent
    testImplementation group: 'net.bytebuddy', name: 'byte-buddy-agent', version: '1.12.0'
    // https://mvnrepository.com/artifact/net.java.dev.jna/jna
    implementation group: 'net.java.dev.jna', name: 'jna', version: '5.9.0'
    // https://mvnrepository.com/artifact/net.java.dev.jna/jna-platform
    implementation group: 'net.java.dev.jna', name: 'jna-platform', version: '5.9.0'
    // https://mvnrepository.com/artifact/net.jcip/jcip-annotations
    implementation group: 'net.jcip', name: 'jcip-annotations', version: '1.0'
    // https://mvnrepository.com/artifact/com.github.spotbugs/spotbugs
    implementation group: 'com.github.spotbugs', name: 'spotbugs', version: '4.4.2', ext: 'pom'
    // https://mvnrepository.com/artifact/com.google.code.findbugs/findbugs
    implementation group: 'com.google.code.findbugs', name: 'findbugs', version: '3.0.1'
    // https://mvnrepository.com/artifact/org.openjdk.jmh/jmh-core
    implementation 'org.openjdk.jmh:jmh-core:1.34'
    // https://mvnrepository.com/artifact/org.openjdk.jmh/jmh-generator-annprocess
    annotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.34'


}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

shadowJar {
    zip64 true
    minimize()
    manifest {
        attributes(['Main-Class': 'xxl.mathematica.network.PingTime'])
    }
    exclude 'logback.xml'
    dependencies {
        exclude(dependency('ch.qos.logback:logback-classic:.*'))
    }
}
